--- a/SmatJobPortal/Areas/Identity/Pages/Account/ForgotPassword.cshtml
+++ b/SmatJobPortal/Areas/Identity/Pages/Account/ForgotPassword.cshtml
@@ -3,7 +3,7 @@
 @{
     ViewData["Title"] = "Forgot your password?";
 }
-
+@* 
 <h1>@ViewData["Title"]</h1>
 <h2>Enter your email.</h2>
 <hr />
@@ -23,4 +23,21 @@
 
 @section Scripts {
     <partial name="_ValidationScriptsPartial" />
-}
+} *@
+
+
+<section class="auth-container">
+    <div class="auth-form">
+        <h2>Reset Your Password</h2>
+        <form id="resetPasswordForm" method="post">
+            <div class="form-group">
+                <label for="email">Email</label>
+                <input asp-for="Input.Email" type="email" id="email"  required>
+            </div>
+            <button type="submit" class="btn btn-block">Reset Password</button>
+        </form>
+        <div class="auth-footer">
+            <p>Remember your password? <a asp-area="Identity" asp-page="/Account/Login">Login here</a></p>
+        </div>
+    </div>
+</section>
