--- a/SmatJobPortal/Views/EmployerDashboard/Index.cshtml
+++ b/SmatJobPortal/Views/EmployerDashboard/Index.cshtml
@@ -82,7 +82,7 @@
                                 <div class="job-info">
                                     <h3>@item.JobTitle</h3>
                                     <p><i class="fas fa-map-marker-alt"></i>@item.JobLocation</p>
-                                    <p><i class="fas fa-clock"></i> Posted @(Math.Round((DateTime.Now-item.AddedTime).TotalDays)) days ago</p>
+                                    <p><i class="fas fa-clock"></i> Posted Less Than @(Math.Round((DateTime.Now-item.AddedTime).TotalDays)+1) days ago</p>
                                 </div>
                                 <div class="job-stats">
                                     <span>12 Applications</span>
@@ -90,7 +90,7 @@
                                 <div class="job-actions">
                                     <a href="../dashboard/employer-edit-job.html"
                                     class="btn btn-small">Edit</a>
-                                    <a href="#" class="btn btn-small btn-danger">Delete</a>
+                                    <a asp-controller="EmployerDashboard" asp-action="DeleteJob" asp-route-id="@item.Id" class="btn btn-small btn-danger">Delete</a>
                                 </div>
                             </div>
                         }
